--- a/hello/index.html
+++ b/hello/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!--<script src="js/hello1.js"></script>--> <!--D'abord déclarer la source du fichier JS -->
     <!--<script src="js/global1.js"></script>-->
-    <script src="js/"></script>
+    <script src="js/egalite.js"></script>
       <!--Puis l'utiliser-->
 
 
