--- a/AJAX/index1.html
+++ b/AJAX/index1.html
@@ -15,7 +15,7 @@
               document.getElementById("demo").innerHTML = this.responseText;
           }
         };
-        xhttp.open("GET", "ajax_info.txt", true);
+        xhttp.open("GET", "ajax_info.txt", true); /*Récupère la source du message depuis le serveur*/
         xhttp.send();
         }
       </script>
