--- a/AJAX/index1.html
+++ b/AJAX/index1.html
@@ -19,6 +19,8 @@
         xhttp.send();
         }
       </script>
+      
+      <script type="text/javascript" src="jsAX/ajax2.js"></script>
 
     </body>
 </html>
