--- a/CVtechex/index.html
+++ b/CVtechex/index.html
@@ -130,8 +130,8 @@
                         <p><span>Powershell</span> : Création logiciel avec interface graphique</p>
                         <p><span>PHP</span>, <span>MySQL</span>, <span>Javascript</span> : niveau intermédiaire, création logiciel et gestion base de données</p>
                         <p><span>Java</span> : En cours d'apprentissage</p>
-                        <h3>LOGICIELS :</h3><p>MS OFFICE: Word, Excel, Outlook</p>
-                        <p>SCCM, Remedy, Active Directory Users and Computers</p>
+                        <h3>LOGICIELS :</h3><p>MS OFFICE 365: Word, Excel, Outlook</p>
+                        <p>Win10, SCCM, Remedy, Active Directory Users and Computers</p>
                     </div>
                 </article>
             </section>
